--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				like Debian packages, Facebook, the AppStore, the Google Play Store or Steam.
 			</p>
 			<p>
-				So you, as a developer, only need to upload your game amd enter the details
+				So you, as a developer, only need to upload your game and enter the details
 				for the distribution system afterwards.
 			</p>
 
@@ -90,9 +90,10 @@
 				showing you best practices in writing real cross-platform compatible games.
 			</p>
 			<p>
-				Read the Getting Started Guide or the Tutorials in the documentation that
-				explain step-by-step how to build a game using the lycheeJS game engine and
-				show you how to use the advantages of rapid development inside the Web Browser.
+				Read the <a href="docs/getting-started.html">Getting Started Guide</a> or the
+				Tutorials in the documentation that explain step-by-step how to build a game
+				using the lycheeJS game engine and show you how to use the advantages of rapid
+				development inside the Web Browser.
 			</p>
 
 		</article>
@@ -104,7 +105,7 @@
 			<p>
 				As the lycheeJS game engine is completely independent of the JavaScript runtime,
 				you are able to use it in any environment. You can even create Games using WebGL
-				in the Web Browser or using native OpenGL (SL / ES 2.0) within the V8 JIT runtime.
+				in the Web Browser or using native OpenGL (SL / ES 2.1) within the V8 JIT runtime.
 			</p>
 			<p>
 				This allows you to create stunning 3D games for modern Web Browsers, native Games
@@ -122,7 +123,7 @@
 				Even this Website and the documentation is hosted on github!
 			</p>
 			<p>
-				If you don't believe it, here are the links:
+				If you don't believe it, here are the links to their repositories:
 			</p>
 
 			<ul>
